# Quite-Listie-Linux

./: .gitignore  .gitmodules  Cargo.toml  README.md  meson.build
build-aux/: cargo-build.sh  cargo-sources.json  com.quiteyellow.QuiteListie.yaml  flatpak-cargo-gen.sh  meson-postinstall.sh
core/: Cargo.toml
core/src/: lib.rs  presets.rs
core/src/engine/: merge.rs  mod.rs  nextcloud.rs  provider_singleton.rs  purge.rs  recurrence.rs  reminder_engine.rs  session.rs  unified_provider.rs  welcome.rs
core/src/model/: background.rs  coordinate.rs  list_document.rs  list_item.rs  list_label.rs  list_summary.rs  mod.rs  reminder.rs  serde_helpers.rs
core/src/util/: deeplink.rs  location_parser.rs  markdown_generator.rs  markdown_import.rs  markdown_parser.rs  mod.rs
gnome/: Cargo.toml
gnome/data/: com.quiteyellow.QuiteListie.desktop.in  com.quiteyellow.QuiteListie.gschema.xml  com.quiteyellow.QuiteListie.metainfo.xml  com.quiteyellow.QuiteListie.service.in  meson.build  resources.gresource.xml
gnome/data/styles/: versatiles-graybeard.json  versatiles-shadow.json
gnome/src/: application.rs  controller.rs  geo.rs  main.rs  runtime.rs  window.rs
gnome/src/models/: list_item_object.rs  mod.rs  pin_object.rs  reminder_entry.rs  sidebar_item.rs
gnome/src/views/: global_map.rs  item_editor.rs  kanban_page.rs  label_editor.rs  list_page.rs  list_settings.rs  location_picker.rs  map_controls.rs  map_page.rs  markdown_export.rs  markdown_import.rs  mod.rs  nextcloud_browser.rs  nextcloud_setup.rs  pin_popover.rs  recent_changes.rs  recycle_bin.rs  reminder_page.rs  settings.rs  share_link.rs
gnome/src/widgets/: map.rs  markdown.rs  mod.rs
