[package]
name = "quite-listie"
version = "0.1.0"
edition = "2021"
description = "Quite Listie — native GNOME (GTK4 + libadwaita) app"
license = "GPL-3.0-or-later"

[[bin]]
name = "quite-listie"
path = "src/main.rs"

[dependencies]
# Shared platform-agnostic core (data model, sync engine, utilities)
quite-listie-core = { path = "../core" }

# GNOME stack
gtk = { package = "gtk4", version = "0.11", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_6"] }
shumate = { package = "libshumate", version = "0.8" }

# Async — tokio runtime for engine I/O, results marshalled to the GLib main loop
tokio = { version = "1", features = ["full"] }
async-channel = "2"
futures-util = "0.3"
anyhow = "1"

# Reused directly by some UI glue
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Emoji catalog (shared with core; used for any emoji fallbacks not covered by GtkEmojiChooser)
emojis = "0.8"

# Inline markdown → Pango markup for the item-notes preview (checkable sublists)
pulldown-cmark = "0.11"
# XDG Location portal (GeoClue-backed) for user-location features. `tokio` matches our
# runtime; `location` enables the portal module (off by default).
ashpd = { version = "0.13.11", default-features = false, features = ["tokio", "location"] }
